# knotch

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.ko.md  README.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.claude/rules/: append-flow.md  causation.md  constitution.md  event-ownership.md  fingerprint.md  governance.md  harness-decoupling.md  hook-integration.md  no-unsafe.md  preconditions.md  testing.md
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz-nightly.yml  install-test.yml  release.yml
crates/knotch-adr/: CLAUDE.md  Cargo.toml
crates/knotch-adr/src/: lib.rs
crates/knotch-agent/: CLAUDE.md  Cargo.toml
crates/knotch-agent/src/: active.rs  atomic.rs  causation.rs  commit.rs  context.rs  error.rs  guard.rs  input.rs  lib.rs  model.rs  orphan.rs  output.rs  queue.rs  session.rs  session_end.rs  subagent.rs  tool_call.rs
crates/knotch-agent/tests/: active.rs  commit.rs  queue_wiring.rs
crates/knotch-cli/: CLAUDE.md  Cargo.toml
crates/knotch-cli/src/: config.rs  home.rs  main.rs
crates/knotch-cli/src/cmd/: approve.rs  doctor.rs  gate.rs  init.rs  log.rs  mark.rs  migrate.rs  mod.rs  reconcile.rs  show.rs  supersede.rs  transition.rs  unit.rs
crates/knotch-cli/src/cmd/hook/: check_commit.rs  finalize_session.rs  guard_rewrite.rs  load_context.rs  mod.rs  record_revert.rs  record_subagent.rs  record_tool_failure.rs  refresh_context.rs  verify_commit.rs
crates/knotch-cli/tests/: cli.rs  hook.rs
crates/knotch-derive/: CLAUDE.md  Cargo.toml
crates/knotch-derive/examples/: workflow_attr.rs
crates/knotch-derive/src/: lib.rs
crates/knotch-derive/tests/: trybuild.rs
crates/knotch-derive/tests/ui/: phase_kind_non_unit.rs  phase_kind_non_unit.stderr  workflow_missing_name.rs  workflow_missing_name.stderr  workflow_ok.rs  workflow_unknown_arg.rs  workflow_unknown_arg.stderr
crates/knotch-frontmatter/: CLAUDE.md  Cargo.toml
crates/knotch-frontmatter/src/: lib.rs
crates/knotch-kernel/: CLAUDE.md  Cargo.toml
crates/knotch-kernel/src/: causation.rs  error.rs  event.rs  fingerprint.rs  id.rs  lib.rs  log.rs  precondition.rs  project.rs  rationale.rs  repository.rs  scope.rs  status.rs  time.rs  workflow.rs
crates/knotch-kernel/tests/: preconditions.rs  projections.rs
crates/knotch-linter/: CLAUDE.md  Cargo.toml
crates/knotch-linter/src/: lib.rs  main.rs  report.rs  rules.rs
crates/knotch-linter/tests/: self_lint.rs
crates/knotch-linter/tests/fixtures/: direct_write.rs.txt  forbidden_name.rs.txt
crates/knotch-lock/: CLAUDE.md  Cargo.toml
crates/knotch-lock/src/: error.rs  file_lock.rs  lib.rs  metadata.rs
crates/knotch-observer/: CLAUDE.md  Cargo.toml
crates/knotch-observer/src/: artifact.rs  context.rs  error.rs  git_log.rs  lib.rs  pending_commit.rs  subprocess.rs
crates/knotch-observer/tests/: cancel.rs  subprocess.rs
crates/knotch-proto/: CLAUDE.md  Cargo.toml
crates/knotch-proto/src/: canonical.rs  header.rs  lib.rs  migration.rs
crates/knotch-query/: CLAUDE.md  Cargo.toml
crates/knotch-query/src/: error.rs  lib.rs
crates/knotch-query/tests/: query.rs
crates/knotch-reconciler/: CLAUDE.md  Cargo.toml
crates/knotch-reconciler/src/: error.rs  lib.rs
crates/knotch-reconciler/tests/: idempotent.rs
crates/knotch-schema/: CLAUDE.md  Cargo.toml
crates/knotch-schema/src/: frontmatter.rs  lib.rs  lifecycle.rs
crates/knotch-storage/: CLAUDE.md  Cargo.toml
crates/knotch-storage/src/: atomic.rs  error.rs  file_repository.rs  fs_storage.rs  lib.rs  load_report.rs
crates/knotch-storage/tests/: concurrency.rs  file_repository.rs  fingerprint_parity.rs  subscribe.rs
crates/knotch-testing/: CLAUDE.md  Cargo.toml
crates/knotch-testing/src/: lib.rs  repo.rs  sim.rs  vcs.rs
crates/knotch-testing/tests/: subscribe.rs
crates/knotch-tracing/: CLAUDE.md  Cargo.toml
crates/knotch-tracing/src/: attrs.rs  lib.rs  spans.rs
crates/knotch-vcs/: CLAUDE.md  Cargo.toml
crates/knotch-vcs/src/: commit.rs  error.rs  gix_vcs.rs  lib.rs  parse.rs
crates/knotch-vcs/tests/: corpus.rs
crates/knotch-workflow/: CLAUDE.md  Cargo.toml  canonical.toml
crates/knotch-workflow/examples/: rfc.rs  specdriven.rs  vibe.rs
crates/knotch-workflow/src/: config.rs  dynamic.rs  lib.rs  ordering.rs  skip.rs
crates/knotch-workflow/src/knotch/: events.rs  mod.rs
crates/knotch-workflow/tests/: canonical_parity.rs
docs/cli-schemas/: README.md
docs/migrations/: README.md
docs/public_api/: README.md  knotch-adr.baseline  knotch-agent.baseline  knotch-derive.baseline  knotch-frontmatter.baseline  knotch-kernel.baseline  knotch-linter.baseline  knotch-lock.baseline  knotch-observer.baseline  knotch-proto.baseline  knotch-query.baseline  knotch-reconciler.baseline  knotch-schema.baseline  knotch-storage.baseline  knotch-testing.baseline  knotch-tracing.baseline  knotch-vcs.baseline  knotch-workflow.baseline
examples/artifact-probes/: Cargo.toml
examples/artifact-probes/src/: main.rs
examples/batch-append/: Cargo.toml
examples/batch-append/src/: main.rs
examples/compliance/: Cargo.toml  README.md
examples/compliance/src/: main.rs
examples/interactive-observer/: Cargo.toml
examples/interactive-observer/src/: main.rs
examples/minimal/: Cargo.toml  README.md
examples/minimal/src/: main.rs
examples/pr-workflow/: Cargo.toml  README.md
examples/pr-workflow/src/: main.rs
examples/subprocess-observer-node/: README.md  observer.mjs
examples/subprocess-observer-py/: observer.py
examples/workflow-spec-driven-case-study/: CLAUDE.md  Cargo.toml
examples/workflow-spec-driven-case-study/examples/: quickstart.rs
examples/workflow-spec-driven-case-study/src/: lib.rs
examples/workflow-spec-driven-case-study/tests/: e2e.rs
examples/workflow-vibe-case-study/: CLAUDE.md  Cargo.toml
examples/workflow-vibe-case-study/src/: lib.rs
examples/workflow-vibe-case-study/tests/: e2e.rs
plugins/knotch/: README.md  knotch-optional-hooks.example.jsonc
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+10 files in other folders)
