[workspace]
resolver = "3"
members = [
    "crates/knotch-kernel",
    "crates/knotch-proto",
    "crates/knotch-derive",
    "crates/knotch-storage",
    "crates/knotch-lock",
    "crates/knotch-vcs",
    "crates/knotch-workflow",
    "crates/knotch-schema",
    "crates/knotch-observer",
    "crates/knotch-reconciler",
    "crates/knotch-query",
    "crates/knotch-tracing",
    "crates/knotch-cli",
    "crates/knotch-linter",
    "crates/knotch-testing",
    "crates/knotch-agent",
    "crates/knotch-frontmatter",
    "crates/knotch-adr",
    "examples/minimal",
    "examples/pr-workflow",
    "examples/compliance",
    "examples/artifact-probes",
    "examples/batch-append",
    "examples/interactive-observer",
    "examples/workflow-spec-driven-case-study",
    "examples/workflow-vibe-case-study",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/knotch-rs/knotch"
homepage = "https://knotch.dev"
authors = ["Knotch contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }  # re-enable per-crate in later phases
cargo = { level = "allow", priority = -1 }
wrong_self_convention = "deny"
get_unwrap = "warn"
multiple_crate_versions = "allow"

[workspace.dependencies]
# --- kernel / runtime ---
jiff             = { version = "0.2",  default-features = false, features = ["std", "serde"] }
uuid             = { version = "1.10", default-features = false, features = ["std", "v7", "serde"] }
compact_str      = { version = "0.8",  default-features = false, features = ["std", "serde"] }
arcstr           = { version = "1.2",  default-features = false, features = ["serde", "std"] }
blake3           = { version = "1.5",  default-features = false }
foldhash         = "0.1"
rustc-hash       = "2.0"
serde            = { version = "1.0",  default-features = false, features = ["std", "derive", "rc"] }
serde_json       = { version = "1.0",  default-features = false, features = ["std"] }
serde_jcs        = "0.1"
yaml_serde       = "0.10"
thiserror        = "2.0"
miette           = { version = "7.2", features = ["fancy"] }
anyhow           = "1.0"
tokio            = { version = "1.40", default-features = false }
tokio-util       = { version = "0.7",  default-features = false }
futures          = { version = "0.3",  default-features = false, features = ["std"] }
rust_decimal     = { version = "1.37", default-features = false, features = ["serde"] }
async-stream     = "0.3"
dashmap          = "6.1"
arc-swap         = "1.7"

# --- adapters ---
rustix           = { version = "0.38", default-features = false, features = ["std", "fs", "process"] }
fs4              = { version = "0.9",  default-features = false, features = ["tokio"] }
gix              = { version = "0.81", default-features = false, features = ["parallel", "revision", "sha1"] }

# --- CLI / UX ---
clap             = { version = "4.5",  default-features = false, features = ["std", "derive", "help", "usage", "error-context", "suggestions", "wrap_help", "env"] }
clap_complete    = "4.5"
assert_cmd       = "2.0"
predicates       = "3.1"
figment          = "0.10"
toml             = "0.8"
winnow           = "0.7"
shell-words      = "1.1"

# --- observability ---
tracing          = "0.1"
tracing-subscriber  = { version = "0.3",  default-features = false, features = ["std", "fmt", "env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry    = "0.27"
opentelemetry-otlp = "0.27"
metrics          = "0.23"
metrics-exporter-prometheus = "0.16"

# --- proc-macro ---
syn              = { version = "2.0",  features = ["full", "extra-traits"] }
quote            = "1.0"
proc-macro2      = "1.0"
darling          = "0.20"
proc-macro-error2 = "2.0"

# --- testing ---
proptest         = "1.5"
insta            = { version = "1.40", features = ["yaml", "redactions"] }
rstest           = "0.23"
trybuild         = "1.0"
loom             = "0.7"
divan            = "0.1"
iai-callgrind    = "0.14"
tempfile         = "3.12"

# --- internal workspace deps ---
knotch-kernel        = { version = "0.1.0", path = "crates/knotch-kernel" }
knotch-proto         = { version = "0.1.0", path = "crates/knotch-proto" }
knotch-derive        = { version = "0.1.0", path = "crates/knotch-derive" }
knotch-storage       = { version = "0.1.0", path = "crates/knotch-storage" }
knotch-lock          = { version = "0.1.0", path = "crates/knotch-lock" }
knotch-vcs           = { version = "0.1.0", path = "crates/knotch-vcs" }
knotch-workflow      = { version = "0.1.0", path = "crates/knotch-workflow" }
knotch-schema        = { version = "0.1.0", path = "crates/knotch-schema" }
knotch-observer      = { version = "0.1.0", path = "crates/knotch-observer" }
knotch-reconciler    = { version = "0.1.0", path = "crates/knotch-reconciler" }
knotch-query         = { version = "0.1.0", path = "crates/knotch-query" }
knotch-tracing       = { version = "0.1.0", path = "crates/knotch-tracing" }
knotch-linter        = { version = "0.1.0", path = "crates/knotch-linter" }
knotch-testing       = { version = "0.1.0", path = "crates/knotch-testing" }
knotch-agent         = { version = "0.1.0", path = "crates/knotch-agent" }
knotch-frontmatter   = { version = "0.1.0", path = "crates/knotch-frontmatter" }
knotch-adr           = { version = "0.1.0", path = "crates/knotch-adr" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.bench]
lto = "thin"

[profile.dev]
debug = "line-tables-only"
