[package]
name = "knotch-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Hook/skill integration library for AI agent harnesses (Claude Code and compatible)."

[lints]
workspace = true

[dependencies]
knotch-kernel  = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
compact_str    = { workspace = true }
jiff           = { workspace = true }
toml           = { workspace = true }
tokio          = { workspace = true, features = ["fs", "rt", "macros"] }
tracing        = { workspace = true }
uuid           = { workspace = true }
shell-words    = { workspace = true }

[dev-dependencies]
knotch-testing  = { workspace = true }
knotch-workflow = { workspace = true }
tempfile        = { workspace = true }
tokio           = { workspace = true, features = ["fs", "rt", "rt-multi-thread", "macros"] }
