[package]
name = "knotch-cli"
description = "Command-line interface for knotch (binary name: knotch)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "knotch"
path = "src/main.rs"

# cargo-binstall picks up prebuilt binaries from the GitHub Release
# assets so `cargo binstall knotch-cli` installs the same archive
# that `scripts/install.sh` downloads. Naming matches
# `.github/workflows/release.yml::build` (archive + target triple).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/knotch-v{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[lints]
workspace = true

[dependencies]
knotch-kernel.workspace = true
knotch-proto.workspace = true
knotch-storage.workspace = true
knotch-reconciler.workspace = true
knotch-observer.workspace = true
knotch-agent.workspace = true
knotch-workflow.workspace = true
clap.workspace = true
clap_complete.workspace = true
compact_str.workspace = true
figment = { workspace = true, features = ["toml", "env"] }
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "fs", "io-util", "io-std"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
