[package]
name = "knotch-frontmatter"
description = "Optional utility for keeping a Markdown file's YAML frontmatter in sync with a knotch unit's ledger status."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
knotch-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
thiserror.workspace = true
compact_str.workspace = true
tokio = { workspace = true, features = ["fs", "rt", "io-util"] }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
