[package]
name = "knotch-kernel"
description = "Pure event-sourced workflow kernel — types, traits, projections, preconditions. No I/O."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["event-sourcing", "workflow", "state", "cqrs"]
categories = ["data-structures", "development-tools"]

[lints]
workspace = true

[dependencies]
jiff.workspace = true
uuid.workspace = true
compact_str.workspace = true
blake3.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_jcs.workspace = true
thiserror.workspace = true
futures.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
knotch-testing = { workspace = true }
serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
