[package]
name = "knotch-observer"
description = "Observer trait + first-party observers (git-log, artifact, frontmatter, command) for knotch."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
knotch-kernel.workspace = true
knotch-vcs.workspace = true
knotch-schema.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "process", "io-util"] }
tokio-util = { workspace = true, features = ["rt"] }
futures.workspace = true
thiserror.workspace = true
compact_str.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml = { workspace = true }
jiff.workspace = true
tracing.workspace = true

[dev-dependencies]
knotch-workflow.workspace = true
knotch-testing.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tempfile.workspace = true
serde.workspace = true
jiff.workspace = true
