[package]
name = "knotch-reconciler"
description = "Parallel-observer orchestration, deterministic merge, and rate-limited reconciliation for knotch."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
knotch-kernel.workspace = true
knotch-observer.workspace = true
knotch-vcs.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tokio-util = { workspace = true, features = ["rt"] }
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
jiff.workspace = true

[dev-dependencies]
knotch-derive.workspace = true
knotch-observer.workspace = true
knotch-testing.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
proptest.workspace = true
