[package]
name = "knotch-storage"
description = "Storage adapters for knotch — FileSystemStorage (JSONL), optional RedbStorage and SqliteStorage."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = []
redb-storage = ["dep:redb"]
sqlite-storage = ["dep:sqlx"]

[lints]
workspace = true

[dependencies]
knotch-kernel.workspace = true
knotch-lock.workspace = true
knotch-proto.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "rt", "sync", "time"] }
futures.workspace = true
async-stream.workspace = true
dashmap.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
jiff.workspace = true
arcstr.workspace = true
blake3.workspace = true
compact_str.workspace = true
rustix.workspace = true
tracing.workspace = true
redb = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
knotch-derive = { workspace = true }
knotch-lock = { workspace = true }
knotch-testing = { workspace = true }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
