[package]
name = "knotch-storage"
description = "File-system storage adapter for knotch — FileSystemStorage (JSONL, atomic rename) + FileRepository<W>."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
knotch-kernel.workspace = true
knotch-lock.workspace = true
knotch-proto.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "rt", "sync", "time"] }
futures.workspace = true
async-stream.workspace = true
dashmap.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
jiff.workspace = true
compact_str.workspace = true
tracing.workspace = true

[dev-dependencies]
knotch-derive = { workspace = true }
knotch-lock = { workspace = true }
knotch-testing = { workspace = true }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
serde.workspace = true
serde_json.workspace = true
