[package]
name = "knotch-testing"
description = "Fixtures, in-memory adapters (Repository/Vcs/Storage), and the simulation harness for knotch."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
knotch-kernel.workspace = true
knotch-proto.workspace = true
knotch-storage.workspace = true
knotch-vcs.workspace = true
knotch-lock.workspace = true
knotch-observer.workspace = true
knotch-reconciler.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time"] }
futures.workspace = true
async-stream.workspace = true
dashmap.workspace = true
arc-swap.workspace = true
serde_json.workspace = true
jiff.workspace = true
compact_str.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde.workspace = true
