[package]
name = "knotch-tracing"
description = "Tracing attribute schema, OpenTelemetry bridge, and cost attribution helpers for knotch."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
knotch-kernel.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
blake3.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["std", "fmt"] }
compact_str.workspace = true
