[package]
name = "knotch-vcs"
description = "Version-control adapters for knotch — GixVcs (default), with an InMemoryVcs for tests."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
knotch-kernel.workspace = true
gix.workspace = true
jiff.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "rt-multi-thread"] }
futures.workspace = true
thiserror.workspace = true
compact_str.workspace = true
winnow.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "rt"] }
insta.workspace = true
