[package]
name = "knotch-workflow"
description = "The canonical knotch workflow + runtime types for concrete WorkflowKind implementations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
knotch-kernel.workspace = true
knotch-storage.workspace = true
knotch-derive.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml = { workspace = true }
compact_str.workspace = true
thiserror.workspace = true

[dev-dependencies]
