[package]
name = "knotch-example-interactive-observer"
description = "An Observer that pauses (via CancellationToken) when it needs input and resumes on the next reconcile, demonstrating the cancellation contract."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "knotch-example-interactive-observer"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
knotch-kernel.workspace = true
knotch-observer.workspace = true
knotch-workflow.workspace = true
knotch-testing.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-util.workspace = true
