[package]
name = "knotch-example-minimal"
description = "Minimal custom WorkflowKind — smallest non-trivial knotch example."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "knotch-example-minimal"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
knotch-kernel.workspace = true
knotch-storage.workspace = true
knotch-derive.workspace = true
serde.workspace = true
compact_str.workspace = true
anyhow.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
