[package]
name = "workflow-spec-driven-case-study"
description = "Case study: a spec-driven workflow (Specify → Design → Implement → Review → Wrapup) with a G0-G6 gate ladder. Demonstrates how to fork knotch's canonical workflow for a different shape."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
knotch-kernel.workspace = true
knotch-derive.workspace = true
knotch-storage.workspace = true
serde.workspace = true
compact_str.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow.workspace = true
