[package]
name = "workflow-vibe-case-study"
description = "Case study: an AI-pair-programming workflow (Intent → Explore → Implement → Verify) with LLM-summary projections. Demonstrates how to fork knotch's canonical workflow and add preset-specific helpers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
knotch-kernel.workspace = true
knotch-storage.workspace = true
knotch-derive.workspace = true
serde.workspace = true
compact_str.workspace = true

[dev-dependencies]
knotch-testing.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
